package edu.ntnu.iir.bidata.enums;

/**
 * Enum for the different types of recipes.
 *
 * @author Tord Fosse
 * @version 1.0
 */
public enum RecipeType {
  BREAKFAST,
  LUNCH,
  STARTER,
  DINNER,
  DESSERT,
}
